templates/modern/css/pdf.css
body.pdf {
    color: black;

    .container {
        width: 1000px;          /* with sufficient font size, fit into 2 pages */
        margin: 0 auto;
        padding: 0;
        background: #fff;       /* #fff for white; originally whiteSmoke */
        border: none;
        border-width: 8px 0 2px 0;
        text-align: left;
        font-size: 100%;        /* scale all text size, was happy with 115% */
    }

    .resume {
        position:relative;
        padding: 40px 80px;
    }

    a {
        text-decoration: none;
        color: black;
    }

    a[href$='.pdf'] {
        display: none;
    }

    blockquote {
        top: 40px;
        right: 50px;
        position: absolute;
    }

    hr {
        page-break-before: avoid !important;
        page-break-after: avoid !important;
    }

    h1 {
        letter-spacing: 0;
        margin-top: 0;
        font-size: 300%;
        text-transform: uppercase;
        font-weight: normal;
    }
    
    h2 {
        letter-spacing: 0;
        text-transform: uppercase;
        font-style: italic;
        font-weight: normal;
        padding-bottom: .2em;    /*reduce since 'Download PDF' no longer present*/
    }
    
    h3 {
        padding: 0 1em .5em;
        float: left;
        width: 12%;
        font-style: normal;
        page-break-after: avoid !important;
    }
    
    h3+p {
        float: left;
        width: 77%;
    }

    h3+ul {
        width: 77%;           /*666 px max before become unaligned*/
        text-align: left;
        text-justify: none;

        li {
            float: left;        /*side-by-side alignment falls apart without this*/
            margin: 0;
            padding: 0;
        }
        
        dl {
            
            dt {
                font-weight: normal;
                margin: 0 0 .75em;
            }
            dd {
                width: 100%;
                padding: 0 0 0 0;
            }
        }
    }

    #skills+ul {
        width: 77%;

        li {
            /* display: block;     /\* to display skills in a list form *\/ */
            /* width: 130%; */
            width: 33%;
        }

        dl {

            dt {
                font-size: 115%; /* works for both skills and references */
                /* margin: 0 0 0.25em; */
            }
        }
    }

    #references+ul {
        width: 77%;

        li {
            width: 33%;
        }
        
        dl {
            
            dt {
                font-size: 115%; /* works for both skills and references */
                margin-bottom: .25em;
            }

            dd {
                /* font-size: 65%; */
                line-height: 1.2em;
                margin: 0;
                word-wrap: break-word;
            }
        }
    }

    h4 {
        margin: 0em 0em 0em 23%;
        padding: 0.5em 0 0 0;
    }

    h4+ul {
        margin: -0.4em 0 0 23%;
    }

    ol {
        float: left;
        width: 77%;
        margin: .7em 0 0;
        page-break-inside: avoid !important;
    }

    ol li {
        width: 33%;
        margin: 0;
    }
    ol li:nth-child(3n) {
        width: 34%;
    }
    ol li:nth-child(1), ol li:nth-child(2), ol li:nth-child(3) {
        border-top: none;
    }

    dl {
        margin: .7em 0 0;
        page-break-inside: auto; /* used to be: avoid !important */
        display: inline-block;
        width: 77%;
        float: left;
        dt {
            page-break-inside: avoid !important;
            page-break-after: avoid !important; /* avoid, but not for sure */
        }
        dd {
            /* page-break-inside: avoid !important; */
            page-break-before: avoid !important;
        }
        strong {
            float: right;
            margin-top: -2em;
            width: 20%
        }
        em {
            font-size: 130%;
            font-style: normal;
        }

    }

    table {
        margin: .2em 0em .5em 23%;
        width: 77%;
    }

    div.footer {
        display: none;          /* hide the footer since can't print on every page*/
    }

    div.personalstatement {
        /* only the widths of h3 and h3+p were redefined, so set them back */
        h3 {
            width: 100%;
             }

        p {
            width: 100%;
        }
    }
}

